
dnl AC_PREREQ([2.13])

dnl without this order in this file, autoconf will not work!
dnl the argument is a source file out of your sources. But
dnl acinclude.m4 makes the job for all programs ;-)
AC_INIT(acinclude.m4)

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl without this order in this file, automake will be confused!
dnl the argument
AM_CONFIG_HEADER(config.h)
AC_CHECK_COMPILERS

if test "$GCC" = "yes"; then
  CXXFLAGS="$CXXFLAGS"
fi

AM_INIT_AUTOMAKE(koffice, 0.1)

dnl make $KDEDIR the default for the installation
AC_PREFIX_DEFAULT(${KDEDIR:-/usr/local/kde})

AM_ENABLE_SHARED(yes)
AM_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL
AC_PATH_KDE
AM_KDE_WITH_NLS

KDE_CHECK_MICO()
KDE_CHECK_MINI_STL([AC_MSG_ERROR([compile mico with --disable-mini-stl])])

idldir="\$(includedir)/idl"
AC_SUBST(idldir)

dnl KDE_CHECK_PYTHON(1.5)
AC_CHECK_HEADERS(unistd.h sys/param.h floatingpoint.h paths.h)
KDE_CHECK_KIMGIO
AC_FIND_QIMGIO
AC_C_BIGENDIAN
AC_CHECK_KDEMAXPATHLEN

KDE_CHECK_NEWLIBS

KOML_INCLUDES='-I$(top_srcdir)/lib/koml -I$(top_builddir)/lib/koml'
AC_SUBST(KOML_INCLUDES)

KSTORE_INCLUDES='-I$(top_srcdir)/lib/store -I$(top_builddir)/lib/store'
AC_SUBST(KSTORE_INCLUDES)

KOFFICECORE_INCLUDES='-I$(top_srcdir)/lib/kofficecore -I$(top_builddir)/lib/kofficecore'
AC_SUBST(KOFFICECORE_INCLUDES)

KOFFICEUI_INCLUDES='-I$(top_srcdir)/lib/kofficeui -I$(top_builddir)/lib/kofficeui'
AC_SUBST(KOFFICEUI_INCLUDES)

LIB_KOFFICEUI='$(top_builddir)/lib/kofficeui/libkofficeui.la'
LIB_KOFFICECORE='$(top_builddir)/lib/kofficecore/libkofficecore.la'
LIB_KSTORE='$(top_builddir)/lib/store/libkstore.la'
LIB_KOML='$(top_builddir)/lib/koml/libkoml.la'
AC_SUBST(LIB_KOFFICEUI)
AC_SUBST(LIB_KOFFICECORE)
AC_SUBST(LIB_KSTORE)
AC_SUBST(LIB_KOML)

interfacedir='$(top_srcdir)/lib/interfaces'
AC_SUBST(interfacedir)

KOFFICE_LIBS='$(LIB_KOFFICEUI) $(LIB_KOFFICECORE) $(LIB_KSTORE) $(LIB_KOML) $(LIB_KDEUTIL)'
AC_SUBST(KOFFICE_LIBS)

KOFFICE_INCLUDES='-I$(top_srcdir)/lib $(KOFFICEUI_INCLUDES) $(KOFFICECORE_INCLUDES) $(KOML_INCLUDES) $(KSTORE_INCLUDES)'
AC_SUBST(KOFFICE_INCLUDES)

dnl ====================
dnl checks for KATASBASE
dnl ====================

KATABASE_DIR=''

dnl check for PostgreSQL headers and libraries
dnl if present compile Katabase 
AC_MSG_CHECKING([for PostgreSQL])
 
AC_ARG_WITH(pgsqldir,
[  --with-pgsqldir=pgsqldir   use pgsql installed in pgsqldir ],
[
  ac_pgsql_dir=$withval
], ac_pgsql_dir=/usr/local
)
 
pgsql_incdirs="$ac_pgsql_dir/pgsql/include /usr/include/pgsql /usr/include /usr/local/include"
AC_FIND_FILE(libpq++.h, $pgsql_incdirs, pgsql_incdir)
if test ! -r $pgsql_incdir/libpq++.h; then
  AC_MSG_WARN(libpq++.h not found.)
else
  KATABASE_DIR='katabase'
fi

PGSQLINC=-I$pgsql_incdir
AC_SUBST(PGSQLINC)

pgsql_libdirs="$ac_pgsql_dir/pgsql/lib /usr/lib /usr/local/lib"
AC_FIND_FILE(libpq.a, $pgsql_libdirs, pgsql_libdir)
if test ! -r $pgsql_libdir/libpq++.a; then
  AC_MSG_WARN(libpq++ not found.)
fi

PGSQLLIB=-L$pgsql_libdir
AC_SUBST(PGSQLLIB)
 
AC_MSG_RESULT([headers $pgsql_incdir, libraries $pgsql_libdir])
 
KATABASE_LIBS="-lpq++"
AC_SUBST(KATABASE_LIBS)
AC_SUBST(KATABASE_DIR)



dnl ====================
dnl Checks for KImageShop
dnl =====================

dnl Beware, I'm not an m4-wizard, I just looked at existing macros and built 
dnl something suiting my needs. pfeiffer@kde.org

AC_MSG_CHECKING([for MMX])

AC_CACHE_VAL(kde_cv_have_mmx,
[
AC_LANG_C
kde_cv_have_mmx=no;

case "$host" in
  *86-*) x86=yes ;;
  *) x86=no
esac

if test "$x86" = "yes"; then

cat >> conftest.$ac_ext <<EOF
#include <stdio.h>

int detect_mmx()
{
  int mmx_bit;
  asm( "mov    %2, %%eax     \n\t"     // request for feature flag
       "cpuid                \n\t"     // get CPU ID flag
       "and    %1, %%edx     \n\t"     // check MMX bit (bit 23)
       "mov    %%edx, %0     \n\t"     // move result to mmx_bit

       :       "=m" (mmx_bit)          // %0
       :       "i"  (0x00000001),      // %1
               "i"  (0x00800000)       // %2
     );

  return mmx_bit;
}
int main()
{
  return detect_mmx();
}
EOF

ac_compile='${CC-gcc} $CFLAGS conftest.$ac_ext -o conftest'
if AC_TRY_EVAL(ac_compile); then
  if test ! `./conftest`; then
    kde_cv_have_mmx=yes;
    AC_DEFINE_UNQUOTED(HAVE_MMX, 1, [Define if you have a cpu with mmx])
  fi
fi
rm conftest*
fi
])

AC_MSG_RESULT($kde_cv_have_mmx)



dnl add here all your Makefiles. These are created by configure
AC_OUTPUT( \
	Makefile \
	katabase/Makefile \
	katabase/lib/Makefile \
	katabase/lib/kdb/Makefile \
	katabase/lib/kdb/kdbcore/Makefile \
	katabase/lib/kdb/kdbpgsql/Makefile \
	katabase/lib/katabasecore/Makefile \
	katabase/lib/katabaseui/Makefile \
	katabase/kdb/Makefile \
	katabase/kformviewer/Makefile \
	katabase/kformeditor/Makefile \
	katabase/kformeditor/pics/Makefile \
	katabase/kformeditor/toolbar/Makefile \
	katabase/kformeditor/cursors/Makefile \
	katabase/kformeditor/formassistent/Makefile \
	katabase/ktables/Makefile \
	katabase/ktables/pics/Makefile \
	katabase/doc/Makefile \
	katabase/doc/ktables/Makefile \
	katabase/doc/ktables/en/Makefile \
	kchart/Makefile	\
	kchart/core/Makefile \
	kchart/pics/Makefile \
	kchart/ui/Makefile \
	kformula/Makefile \
	kformula/pics/Makefile \
	killustrator/Makefile \
	killustrator/doc/Makefile \
	killustrator/filter/Makefile \
	killustrator/koffice/Makefile \
	killustrator/pics/Makefile \
	killustrator/share/Makefile \
	killustrator/standalone/Makefile \
	killustrator/xmlutils/Makefile \
	kimage/Makefile \
	kimage/pics/Makefile \
	kimageshop/Makefile \
	kimageshop/ktl/Makefile \
	kimageshop/widgets/Makefile \
	kimageshop/dialogs/Makefile \
	kimageshop/tools/Makefile \
	kimageshop/pics/Makefile \
	kimageshop/data/Makefile \
	kimageshop/data/brushes/Makefile \
	kimageshop/data/images/Makefile \
   	kpresenter/Makefile \
	kpresenter/autoformEdit/Makefile \
	kpresenter/autoforms/Makefile \
	kpresenter/autoforms/Arrows/Makefile \
	kpresenter/autoforms/Connections/Makefile \
	kpresenter/pics/Makefile \
	kpresenter/templates/Makefile \
	kpresenter/templates/Screenpresentations/Makefile \
	kpresenter/templates/Professional/Makefile \
	kpresenter/toolbar/Makefile \
	kpresenter/dtd/Makefile \
	kpresenter/slideshow/Makefile \
	kspread/Makefile \
	kspread/pics/Makefile \
	kspread/toolbar/Makefile \
	kspread/scripts/Makefile \
	kspread/dtd/Makefile \
	kspread/filters/Makefile \
	kspread/filters/csv/Makefile \
	kword/Makefile \
	kword/pics/Makefile \
	kword/toolbar/Makefile \
	kword/templates/Makefile \
	kword/templates/Wordprocessing/Makefile \
	kword/templates/DTP/Makefile \
	kword/dtd/Makefile \
	kword/filters/Makefile \
	kword/filters/ascii/Makefile \
	kword/filters/html/Makefile \
	kdiagramm/Makefile \
	kdiagramm/pics/Makefile \
	koshell/Makefile \
	lib/Makefile \
	lib/kscript/Makefile \
	lib/kscript/ksidl/Makefile \
	lib/kofficecore/Makefile \
	lib/kofficeui/Makefile \
	lib/kofficeui/pics/Makefile \
	lib/kofficeui/test/Makefile \
	lib/koml/Makefile \
	lib/store/Makefile \
	filters/Makefile \
	filters/lib/Makefile \
	filters/excel97/Makefile \
	filters/powerpoint97/Makefile \
	filters/winword97/Makefile \
	tools/Makefile \
	tools/spell/Makefile \
	plugins/Makefile \
	plugins/recorder/Makefile \
	plugins/recorder/pics/Makefile \
	plugins/calc/Makefile \
	plugins/calc/pics/Makefile \
	pics/Makefile \
	pics/toolbar/Makefile \
	servicetypes/Makefile
 )
