add_subdirectory(calligra)
if(BUILD_kexi)
    add_subdirectory(kexi)
endif(BUILD_kexi)
if(BUILD_stage)
    add_subdirectory(stage)
endif(BUILD_stage)
if(BUILD_tables)
	add_subdirectory(tables)
endif(BUILD_tables)
add_subdirectory(thesaurus)
INSTALL(FILES   calligra.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
